# slnx2compilecmd

./: CMakeLists.txt  README.md  README.zh_CN.md
src/: expressionParser.cpp  expressionParser.h  generator.cpp  generator.h  globalVariables.cpp  globalVariables.h  logging.h  macros.cpp  macros.h  main.cpp  utils.cpp  utils.h
